--- a/style.css
+++ b/style.css
@@ -4,10 +4,16 @@
     margin: 0;
 }
 
+/*
+body background color
+*/
 body {
     background-color: #d9dcd6;
 }
 
+/*
+formatting header style
+*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,15 +21,24 @@ body {
     color: #ffffff;
 }
 
+/*
+header h1 tag style
+*/
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+/*
+header "SEO" letters to different color
+*/
 .header h1 .seo {
     color: #d9dcd6;
 }
 
+/*
+Header navigation class formatting
+*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -32,24 +47,39 @@ body {
     font-size: 20px;
 }
 
+/*
+Setting the header unordered list style type
+*/
 .header nav ul {
     list-style-type: none;
 }
 
+/*
+change style of unordered list to display horizontally
+*/
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/*
+element "a" text color
+*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/*
+element "p" font size
+*/
 p {
     font-size: 16px;
 }
 
+/*
+class "section" formatting
+*/
 .section {
     height: 800px;
     width: 100%;
@@ -59,22 +89,33 @@ p {
     background-position: center;
 }
 
+/*
+class "float-left", align image left
+*/
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
+/*
+class "float-right", align image right
+*/
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
+/*
+class content style
+*/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/*
+class aside style
+*/
 .aside {
     margin-right: 20px;
     padding: 20px;
@@ -86,22 +127,34 @@ p {
     background-color: #2589bd;
 }
 
+/*
+class figure style
+*/
 .figure {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/*
+class figure, element h3 style
+*/
 .figure h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/*
+class figure, element img style
+*/
 .figure img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+/*
+class article style
+*/
 .article {
     margin-bottom: 20px;
     padding: 50px;
@@ -111,15 +164,24 @@ p {
     color: #ffffff;
 }
 
+/*
+class article, element img style
+*/
 .article img {
     max-height: 200px;
 }
 
+/*
+class article, element h2 style
+*/
 .article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }  
 
+/*
+element footer style
+*/
 .footer {
     padding: 30px;
     clear: both;
@@ -127,6 +189,9 @@ p {
     text-align: center;
 }
 
+/*
+class footer, element h2 style
+*/
 .footer h2 {
     font-size: 20px;
 }
